# bf6-settings-manager

./: .gitignore  LICENSE  README.md  build_msi.py  clean_build.py  main.py  pyproject.toml  version_info.txt
.github/workflows/: codeql.yml  update-download-badge.yml
app/: __init__.py  __main__.py
app/src/: brightness_detector.py  config_manager.py  file_protector.py  process_checker.py
app/src/ui/: __init__.py  main_window.py  theme.py  theme_utils.py
app/src/ui/components/: __init__.py  search_bar.py  setting_card.py  setting_row.py  status_chip.py
app/src/ui/dialogs/: __init__.py  backup_dialog.py  preset_dialog.py
src/: __init__.py  admin.py  brightness_detector.py  config_manager.py  process_checker.py
src/ui/: main_window.py  theme.py
