[project]
name = "bf6-settings-manager"
version = "1.0.0"
description = "Battlefield 6 Settings Manager - Manage and optimize your BF6 settings"
authors = [{name = "Deco"}]
requires-python = ">=3.12,<3.14"
dependencies = [
    "flet>=0.28.3",
    "psutil>=6.1.0",
    "pywin32>=308",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
